Correct sudo execution script.

--- a/src/main/bash/sudo.at.current.env
+++ b/src/main/bash/sudo.at.current.env
@@ -4,4 +4,5 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 command_managed_id='76253177527041244611000010346315433424'
 	. command.managed.define
-sudo --preserve-env env "PATH=$PATH" bash -c "$1"
+echo Executing following command with sudo: $@
+sudo --preserve-env env "PATH=$PATH" bash -c "$@"
