--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "doc": "doc"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "release" : "release-it"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,9 @@
   "license": "SEE LICENSE IN each file",
   "bugs": {
     "url": "https://gitlab.com/splitcells/net.splitcells.os.state.interface/issues"
+  },
+  "devDependencies": {
+    "release-it": "*"
   },
   "homepage": "https://gitlab.com/splitcells/net.splitcells.os.state.interface#readme"
 }
