--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "release-it": "^12.3.6"
   },
   "homepage": "https://gitlab.com/splitcells/net.splitcells.os.state.interface#readme",
-  "gitlab": {
-    "release": true
+    "release-it": {
+      "gitlab": {
+        "release": true
+      }
+    }
   }
 }
