Automate release on Gitlab.

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "homepage": "https://gitlab.com/splitcells/net.splitcells.os.state.interface#readme",
   "release-it": {
     "gitlab": {
-      "release": true
+      "release": true,
+      "origin": "https://gitlab.com/splitcells/net.splitcells.os.state.interface"
     }
   }
 }
