--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "release-it": {
     "gitlab": {
       "release": true,
-      "origin": "https://gitlab.com/splitcells/net.splitcells.os.state.interface"
+      "web": "https://gitlab.com/splitcells/net.splitcells.os.state.interface"
     }
   }
 }
