--- a/.gitignore
+++ b/.gitignore
@@ -169,4 +169,6 @@ buildNumber.properties
 
 .DS_Store
 .idea
-/net.splitcells.os.state.interface.iml
+
+# Modules installed via npm.
+node_modules/
