--- a/src/main/bash/echo/level/echo.level.config
+++ b/src/main/bash/echo/level/echo.level.config
@@ -3,5 +3,4 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-shell_width=$(shell.width)
-printf "\r$(repeat ' ' times $shell_width)\r"
+echo.level.info
