--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 before_script:
-  - make
-  - make install
+  - chmod +x ./bin/install
+  - ./bin/install
 rspec:
   script:
     - chmod +x ~/.profile
