Create test suite.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,4 @@ test:
   script:
     - chmod +x ~/.profile
     - . ~/.profile
-    - mkdir -p target/test
-    - cd target/test
-    - echo $PATH
+    - ./bin/test
