Fix CI pipeline error:
"/bin/bash: line 99: ./bin/test: Permission denied"

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,8 @@
 before_script:
-  - chmod +x ./bin/install
-  - ./bin/install
+  - chmod +x ./configure
+  - ./configure
+  - make
+  - make install
 test:
   script:
     - chmod +x ~/.profile
