Trying to fix CI pipeline error.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,5 +7,5 @@ test:
   script:
     - chmod +x ~/.profile
     - . ~/.profile
-    # TODO - ./bin/test
+    - ./bin/test
     # TOFIX "tput: No value for $TERM and no -T specified"
