--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,6 +28,7 @@ jobs:
     # Runs a set of commands using the runners shell
     - name: Install this framework.
       run: |
+        cd $GITHUB_WORKSPACE
         chmod +x ./configure
         ./configure
         make
@@ -36,6 +37,7 @@ jobs:
     # Runs a set of commands using the runners shell
     - name: Run tests
       run: |
+        cd $GITHUB_WORKSPACE
         chmod +x ~/.profile
         . ~/.profile
         ./bin/test
