--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [2.7, 3.5, 3.6, 3.7, 3.8]
+        python-version: [3.7]
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -26,18 +26,13 @@ jobs:
     - uses: actions/checkout@v2
 
     # Runs a set of commands using the runners shell
-    - name: Install this framework.
+    - name: Install this framework and run tests.
       run: |
         cd $GITHUB_WORKSPACE
         chmod +x ./configure
         ./configure
         make
         make install
-        
-    # Runs a set of commands using the runners shell
-    - name: Run tests
-      run: |
-        cd $GITHUB_WORKSPACE
         chmod +x ~/.profile
         . ~/.profile
         ./bin/test
