Fix CI integration.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,6 +33,6 @@ jobs:
         ./configure
         make
         make install
-        chmod +x ~/.profile
-        . ~/.profile
+        chmod +x ~/.bashrc
+        . ~/.bashrc
         ./bin/test
