Debug Github-CI integration.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,4 +17,5 @@ jobs:
       - name: Build
         run: |
           cd $GITHUB_WORKSPACE
+          echo $GITHUB_WORKSPACE
           ./bin/build
