--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>net.splitcells</groupId>
     <artifactId>pom-java-defaults</artifactId>
-    <version>0.1.0</version>
+    <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
     <!-- TODO .gitignore of this project is also a template. -->
     <!-- TODO Update to Java 12. -->
@@ -54,7 +54,8 @@
                     <release>${java.version}</release>
                     <encoding>${encoding.default}</encoding>
                     <showWarnings>true</showWarnings>
-                    <verbose>false</verbose>
+                    <compilerArgument>-Xlint:all</compilerArgument>
+                    <showDeprecation>true</showDeprecation>
                 </configuration>
             </plugin>
         </plugins>
