--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,9 +11,12 @@ jobs:
     strategy:
       matrix:
         python-version: [3.7]
-        java-version: [11]
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-java@v1
+        with:
+          java-version: '11'
+          java-package: 'jdk'
       - name: Build
         run: |
           cd $GITHUB_WORKSPACE
