--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
         <module>../net.splitcells.pom.java.defaults</module>
         <module>../net.splitcells.dem</module>
         <module>../net.splitcells.gel.core</module>
+        <module>../net.splitcells.gel.sheath</module>
         <module>../net.splitcells.gel.doc</module>
     </modules>
 </project>
