--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>net.splitcells</groupId>
-    <artifactId>system</artifactId>
+    <artifactId>network</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modules>
-        <module>../net.splitcells.gel</module>
-        <module>../net.splitcells.os.state.interface</module>
-        <module>../net.splitcells.os.state.interface.lib</module>
+        <module>projects/net.splitcells.system</module>
+        <module>../net.splitcells.os.state.interface.lib.gpl.2</module>
+        <module>../net.splitcells.os.state.interface.lib.gpl.3</module>
     </modules>
 </project>
