--- a/.github/workflows/net.splitcells.system.build.yml
+++ b/.github/workflows/net.splitcells.system.build.yml
@@ -20,6 +20,6 @@ jobs:
           java-package: 'jdk'
       - name: Build
         run: |
-          cd $GITHUB_WORKSPACE
+          cd $GITHUB_WORKSPACE/projects/net.splitcells.system
           echo $GITHUB_WORKSPACE
           ./bin/build
