--- a/projects/net.splitcells.gel.doc/pom.xml
+++ b/projects/net.splitcells.gel.doc/pom.xml
@@ -3,6 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>net.splitcells</groupId>
     <artifactId>gel.doc</artifactId>
+    <name>Generic Allocator Documentation</name>
     <parent>
         <groupId>net.splitcells</groupId>
         <artifactId>pom-java-defaults</artifactId>
