--- a/projects/net.splitcells.system/pom.xml
+++ b/projects/net.splitcells.system/pom.xml
@@ -6,6 +6,8 @@
     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modules>
+        <module>../net.splitcells.pom.java.defaults</module>
+        <module>../net.splitcells.dem</module>
         <module>../net.splitcells.gel</module>
         <module>../net.splitcells.os.state.interface</module>
         <module>../net.splitcells.os.state.interface.lib</module>
