--- a/.builds/net.splitcells.system.build.yml
+++ b/.builds/net.splitcells.system.build.yml
@@ -6,5 +6,5 @@ sources:
   - https://git.sr.ht/~splitcells-net/net.splitcells.network
 tasks:
   - build: |
-      cd projects/net.splitcells.system
+      cd net.splitcells.network/projects/net.splitcells.system
       ./bin/build
