#14 Migrate easily migrateable classes.

--- a/projects/net.splitcells.website/pom.xml
+++ b/projects/net.splitcells.website/pom.xml
@@ -10,6 +10,14 @@
     </parent>
     <dependencies>
         <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-web</artifactId>
+        </dependency>
+        <dependency>
             <groupId>net.splitcells</groupId>
             <artifactId>dem</artifactId>
             <version>0.0.1-SNAPSHOT</version>
@@ -48,4 +56,16 @@
             <url>https://jitpack.io</url>
         </repository>
     </repositories>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <!-- https://mvnrepository.com/artifact/io.vertx/vertx-stack-depchain -->
+                <groupId>io.vertx</groupId>
+                <artifactId>vertx-stack-depchain</artifactId>
+                <version>3.8.1</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 </project>
