Move generated antlr4 source code to target folder.

--- a/projects/net.splitcells.dem/pom.xml
+++ b/projects/net.splitcells.dem/pom.xml
@@ -53,13 +53,31 @@
                             </includes>
                             <visitor>true</visitor>
                             <listener>true</listener>
-                            <outputDirectory>src/main/java/net/splitcells/dem/source/code/antlr4</outputDirectory>
+                            <outputDirectory>target/antlr4</outputDirectory>
                         </configuration>
                         <executions>
                             <execution>
                                 <goals>
                                     <goal>antlr4</goal>
                                 </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>build-helper-maven-plugin</artifactId>
+                        <version>3.0.0</version>
+                        <executions>
+                            <execution>
+                                <phase>generate-sources</phase>
+                                <goals>
+                                    <goal>add-source</goal>
+                                </goals>
+                                <configuration>
+                                    <sources>
+                                        <source>target/antlr4</source>
+                                    </sources>
+                                </configuration>
                             </execution>
                         </executions>
                     </plugin>
