--- a/projects/net.splitcells.system/pom.xml
+++ b/projects/net.splitcells.system/pom.xml
@@ -8,9 +8,10 @@
     <modules>
         <module>../net.splitcells.pom.java.defaults</module>
         <module>../net.splitcells.dem</module>
-        <module>../net.splitcells.website.server</module>
         <module>../net.splitcells.gel</module>
         <module>../net.splitcells.os.state.interface</module>
         <module>../net.splitcells.os.state.interface.lib</module>
+        <module>../net.splitcells.website.server</module>
+        <module>../net.splitcells.website.default.content</module>
     </modules>
 </project>
