#28 Fix CI error.

--- a/bin/build
+++ b/bin/build
@@ -1,6 +1,7 @@
 #!/usr/bin/env bash
 # This tests every command.
 set -e
+chmod +x ./bin/*
 export JAVA_VERSION=11 # This is required on FreeBSD, if an older Java version is set as default.
 mvn clean install
 cd projects/net.splitcells.os.state.interface
