#28 Move Build steps of system project to system build command.

--- a/projects/net.splitcells.system/bin/build
+++ b/projects/net.splitcells.system/bin/build
@@ -3,3 +3,9 @@ set -e
 chmod +x ./bin/*
 export JAVA_VERSION=11 # This is required on FreeBSD, if an older Java version is set as default.
 mvn clean install
+cd net.splitcells.os.state.interface
+    ./bin/test
+    cd ..
+cd net.splitcells.website.server
+  ./bin/serve.to.folder
+  cd ..
