#28 Remove website server process from CI,
because architecture does not currently support it well.
This is the case because XSL does not really seem support relative paths at the moment.

--- a/projects/net.splitcells.system/bin/build
+++ b/projects/net.splitcells.system/bin/build
@@ -6,5 +6,5 @@ mvn clean install
 cd ../net.splitcells.os.state.interface
     ./bin/test.routine
 cd ../net.splitcells.website.server
-  ./bin/serve.to.folder
+  # TODO ./bin/serve.to.folder
   cd ..
