Fix CI for sourcehut.

--- a/.builds/net.splitcells.system.build.yml
+++ b/.builds/net.splitcells.system.build.yml
@@ -8,4 +8,4 @@ sources:
 tasks:
   - build: |
       cd net.splitcells.network/projects/net.splitcells.system
-      ./bin/build
+      mvn install # ./bin/build
