Fix CI for sourcehut.

--- a/.builds/net.splitcells.system.build.yml
+++ b/.builds/net.splitcells.system.build.yml
@@ -8,4 +8,5 @@ sources:
 tasks:
   - build: |
       cd net.splitcells.network/projects/net.splitcells.system
+      export JAVA_VERSION=11
       mvn install # TODO ./bin/build
