#45 Support 'mvn site' without setting profiles.

--- a/projects/net.splitcells.pom.java.defaults/pom.xml
+++ b/projects/net.splitcells.pom.java.defaults/pom.xml
@@ -481,7 +481,7 @@
             <id>report</id>
             <!-- Generate all reports via "mvn site". -->
             <activation>
-                <activeByDefault>false</activeByDefault>
+                <activeByDefault>true</activeByDefault>
             </activation>
             <build>
                 <plugins>
