--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,10 @@
 net-splitcells-os-state-interface-test:
   image: python:3.7
   script:
-    - cd projects/net.splitcells.os.state.interface
-    - ./bin/test.routine
+    - cd projects/net.splitcells.system
+    - ./bin/build.part.with.python
 test:
   image: maven:3.6.3-openjdk-11
   script:
     - cd projects/net.splitcells.system
-    - ./bin/build
+    - ./bin/build.part.with.java
