#46 Disable integration tests by default,
because of performance requirementrs for such tests.

--- a/projects/net.splitcells.pom.java.defaults/pom.xml
+++ b/projects/net.splitcells.pom.java.defaults/pom.xml
@@ -132,6 +132,7 @@
                             <useUnlimitedThreads>true</useUnlimitedThreads>
                             <!-- TODO Execute tests in parallel. parallel>all</parallel>
                             <useUnlimitedThreads>true</useUnlimitedThreads-->
+                            <excludedGroups>testing.integration</excludedGroups>
                         </configuration>
                     </plugin>
                 </plugins>
