Fix build error.

--- a/projects/net.splitcells.network.blog/pom.xml
+++ b/projects/net.splitcells.network.blog/pom.xml
@@ -3,5 +3,6 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>net.splitcells</groupId>
 	<artifactId>network.blog</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
 	<name>Splitcells Network Blog</name>
 </project>
