--- a/projects/net.splitcells.dem/pom.xml
+++ b/projects/net.splitcells.dem/pom.xml
@@ -16,6 +16,11 @@
             <artifactId>commons-io</artifactId>
             <version>2.4</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.javaparser</groupId>
+            <artifactId>javaparser-symbol-solver-core</artifactId>
+            <version>3.22.0</version>
+        </dependency>
     </dependencies>
     <profiles>
         <profile>
