--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>projects/net.splitcells.system</module>
-        <module>../net.splitcells.os.state.interface.lib.gpl.2</module>
-        <module>../net.splitcells.os.state.interface.lib.gpl.3</module>
+        <!--TODO Do not just uncomment the following. Otherwise, the maven project cannot be build. module>../net.splitcells.os.state.interface.lib.gpl.2</module-->
+        <!--TODO module>../net.splitcells.os.state.interface.lib.gpl.3</module-->
     </modules>
 </project>
