--- a/projects/net.splitcells.system/pom.xml
+++ b/projects/net.splitcells.system/pom.xml
@@ -13,7 +13,7 @@
         <module>../net.splitcells.os.state.interface.lib</module>
         <module>../net.splitcells.website.server</module>
         <module>../net.splitcells.website.default.content</module>
-        <module>../net.splitcells.ses</module>
+        <module>../net.splitcells.sep</module>
         <module>../net.splitcells.network.blog</module>
     </modules>
 </project>
