Simplify active Github workflow.

--- a/.github/workflows/net.splitcells.system.build.yml
+++ b/.github/workflows/net.splitcells.system.build.yml
@@ -23,3 +23,5 @@ jobs:
           cd $GITHUB_WORKSPACE/projects/net.splitcells.system
           echo $GITHUB_WORKSPACE
           ./bin/build
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v1
