Fix Github workflow.

--- a/.github/workflows/net.splitcells.system.build.yml
+++ b/.github/workflows/net.splitcells.system.build.yml
@@ -23,5 +23,9 @@ jobs:
           cd $GITHUB_WORKSPACE/projects/net.splitcells.system
           echo $GITHUB_WORKSPACE
           ./bin/build
+  - name: Initialize CodeQL
+      uses: github/codeql-action/init@v1
+      with:
+        languages: ['java']
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v1
